Added latest change

--- a/notebooks/ocr-part5.ipynb
+++ b/notebooks/ocr-part5.ipynb
@@ -138,7 +138,8 @@
     "       \n",
     "        transform_list =  [transforms.Grayscale(1),\n",
     "                            transforms.ToTensor(), \n",
-    "                            transforms.Normalize((0.5,), (0.5,))]\n",
+    "                            transforms.Normalize((0.5,), (0.5,)),\n",
+    "                          transforms.]\n",
     "        self.transform = transforms.Compose(transform_list)\n",
     "        self.collate_fn = SynthCollator()\n",
     "\n",
@@ -178,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Changed the label part to get the labesls from the list\r",
+    "##### Changed the label part to get the labesls from the list\n",
     "item['label'] = labels\n"
    ]
   },
@@ -524,7 +525,7 @@
    "metadata": {},
    "source": [
     "#### Added this function to check if the model items loaded properly\n",
-    "I faced this error Parameter 'rnn.1.embedding.bias' not found in the loaded state dictionary.\r\n"
+    "I faced this error Parameter 'rnn.1.embedding.bias' not found in the loaded state dictionary.\n"
    ]
   },
   {
@@ -1236,9 +1237,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How did your model fare?\n",
-    "What kind of mistakes does it tend to make?\n",
-    "How could you improve it?"
+    "#### How did your model fare?  \n",
+    "it doesn't work properly \n",
+    "#### What kind of mistakes does it tend to make? \n",
+    "I think one main reason is that we didn't have enough trining data and the output data we gave was string and should be  numbers or array of numbers, we changed the image height to 32 which has impact on loosing the data\n",
+    "#### How could you improve it?\n",
+    "image height should be the max image height , and the labels should be mapped to proper array.\n",
+    "\n",
+    "\n",
+    "\n",
+    "___________________________\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m item\u001b[38;5;241m=\u001b[39mdata\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m      2\u001b[0m imafe\u001b[38;5;241m=\u001b[39m item[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimg\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "item=data.__getitem__(10)\n",
+    "image= item['img']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('img size',img.size)\n",
+    "plt.imshow(img)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 5 - Exploring New Architectures (5 points)\n",
+    "Implement another model architecture. There are different ways to do so, from changing the number and kind of layers all the way to incorporating the distribution of the letters across the dataset (this last information is available on Kaggle, where you got the dataset from). Tell us what you changed and what your thought process behind the changes was."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Changed the kernel size and paddiong and checked the results.\n",
+    "\n",
+    "ks = [3, 3, 3, 3, 3, 3, 2]\n",
+    "ps = [1, 1, 1, 1, 1, 1, 0]\n",
+    "ss = [1, 1, 1, 1, 1, 1, 1]\n",
+    "nm = [64, 128, 256, 256, 512, 512, 512]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "by increasing the nm to 1024 get an memory leakage\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus 1 – Improving the Performance (5 points)\n",
+    "Now that you have explored different architectures, you can try and improve the performance of the original model. As before, remember to tell us your changes, why you made them, and some error analysis.  If your efforts in Part 5 improved the model, you get points for this bonus section too."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1- adding the transforms.RandomAdjustSharpness(2) to sharpen the image 2 times\n",
+    "2- adding the feature extraction layer to the network \n",
+    "    self.nn = nn.Linear(512*512,120)\n",
+    "    self.nn = nn.Linear(120,64)\n",
+    "    self.nn = nn.Linear(120,opt['alphabet'].size)"
    ]
   }
  ],
@@ -1258,7 +1352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
